--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             width: 500px;
             color: blue;
             align-items: center;
+            background-color: grey;
         
         }
         .contenedor h1{
