Estructurando mi proyecto

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/stylos.css">
     <style>
         .contenedor{
             text-align: center;
             width: 500px;
             color: blue;
-            align-items: center;
             background-color: grey;
         
         }
