--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 </head>
 <body>
     <header>
+        <div id='cabecera'>
+                CABECERA
+        </div>
         <nav>
             <ul>
                 <li>Home</li>
