Cambios a la pagina web
23/7/2020

--- a/index.html
+++ b/index.html
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
-<html lang="en">
-=======
 <html lang="es">
->>>>>>> cabecera
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-<<<<<<< HEAD
+    <title>Ejemplo GITHUB</title>
     <link rel="stylesheet" href="css/stylos.css">
-=======
->>>>>>> cabecera
     <style>
         .contenedor{
             text-align: center;
             width: 500px;
             color: blue;
-<<<<<<< HEAD
             background-color: grey;
-=======
             align-items: center;
->>>>>>> cabecera
         
         }
         .contenedor h1{
@@ -31,10 +21,7 @@
     </style>
 </head>
 <body>
-<<<<<<< HEAD
-    <main>
-        <div class="contenedor">
-=======
+    
     <header>
         <div id='cabecera'>
                 CABECERA
@@ -48,9 +35,7 @@
         </nav>
     </header>
     <main>
-        <div class="contenedor">
-
->>>>>>> cabecera
+        <div class="cabecera">
             <h1>EJEMPLO DE PAGINA WEB</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cum exercitationem mollitia explicabo sunt incidunt autem deserunt ullam cupiditate! Soluta culpa accusamus cum qui! Qui, vel? Sapiente culpa dolorem esse.</p>
         </div>
